_includes/index.scss
@import "webfonts/eb-garamond.scss";

@import "vars.scss";

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  background: hsl(39, 77%, 83%); // wheat
  color: hsl(0, 0%, 20%);
  font-family: Arial, "Helvetica Neue", sans-serif;
}

.hero {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  --hero-horizontal-padding: 200px;
  padding: 0 var(--hero-horizontal-padding);
  padding-top: 122px;
  padding-bottom: $face-height;

  @media screen and (max-width: $breakpoint-100px-padding) {
    --hero-horizontal-padding: 100px;
  }

  @media screen and (max-width: $breakpoint-50px-padding) {
    --hero-horizontal-padding: 50px;
  }

  &-content {
    width: 100%;
    max-width: 535px;
    margin-left: calc((100vw - 2 * var(--hero-horizontal-padding)) / 2);
    padding-bottom: 150px; // So there's room to see all the content under the me image

    @media screen and (max-width: $breakpoint-two-col) {
      margin-left: 0;
    }
  }

  &-feature {
    position: fixed;
    top: 122px;
    bottom: $face-height;
    left: var(--hero-horizontal-padding);
    height: calc(100vh - 122px - $face-height);
    overflow-x: hidden;
    overflow-y: visible;

    display: flex;
    flex-direction: column;
    justify-content: center;

    @media screen and (max-width: $breakpoint-two-col) {
      position: static;
      height: auto;
    }

    @media screen and (max-width: 420px) {
      font-size: 0.9em;
    }

    .badges {
      display: flex;
      filter: grayscale(1);
      margin-bottom: 30px;

      img {
        margin-right: 5px;
      }
    }

    &-main-text {
      font-size: 3em;
      font-family: $fancy-serif;
      letter-spacing: -0.0625em;
      font-weight: 500;
      line-height: 1;

      transform: scaleY(2.5) scaleX(1.1) rotate(-4deg);
      transform-origin: bottom left;
      font-weight: bold;
      font-style: italic;
      padding-top: 2em; // To make up for all the weird transforms so it takes up the space it actually shows as

      // width: max-content;
      // max-width: 100%;
      // position: relative;

      // Rainbow blur
      // &:before {
      //   content: "";
      //   position: absolute;
      //   top: 0;
      //   bottom: 0;
      //   left: 0;
      //   right: 0;
      //   background: $rainbow-gradient-horizontal;
      //   z-index: -1;
      //   filter: blur(100px);
      // }
    }

    &-secondary-text {
      font-size: 1.25em;
      line-height: 1.4;

      transform-origin: top left;
      transform: rotate(-8.5deg);
      font-style: italic;
      margin-bottom: 0.7em;
      max-width: 450px;
    }
  }

  &-status {
    margin-top: 15px;
    line-height: 1.4;
    font-size: 0.9em;
    padding: 10px;
    border-radius: 8px;
    border: 1px solid;
  }
}

.section-heading {
  font-size: 24px;
  font-weight: 600;
  letter-spacing: -1px;
  padding-bottom: 5px;
  border-bottom: 1px dashed;
  margin-top: 40px;
}

.grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 12px;

  @media screen and (max-width: $breakpoint-cards-single-col) {
    grid-template-columns: 1fr;
  }

  &.single {
    grid-template-columns: 1fr;

    // Note min-width not max-width
    @media screen and (min-width: $breakpoint-cards-single-col) {
      a {
        flex-direction: row;
        justify-content: space-between;
        align-items: center;

        > :last-child {
          white-space: nowrap;
        }
      }
    }
  }

  // Formerly &-card
  a {
    display: flex;
    flex-direction: column;
    gap: 4px;
    padding: 10px;
    border-radius: 8px;
    background: hsla(0, 0%, 20%, 0.1);
    color: inherit;
    text-decoration: none;
    outline: none !important;

    &:hover {
      background: hsla(0, 0%, 20%, 0.15);
    }

    &:active {
      background: hsla(0, 0%, 20%, 0.2);
    }

    // Formerly &-title
    h3 {
      margin: 0;
      font-weight: 600;
      letter-spacing: -1px;
    }
    // Formerly &-text
    p {
      margin: 0;
      opacity: 0.75;
      font-size: 15px;
    }
  }
}

.find-me-on {
  line-height: 1.5;

  a {
    color: inherit;
    font-weight: 600;
    letter-spacing: -0.1px;
    text-decoration-thickness: 2px;
    display: inline-block;

    &:hover {
      text-decoration-style: dotted;
      background-color: hsla(0, 0%, 20%, 0.1);
    }
  }
}

/*
.rainbow-bar {
  position: fixed;
  height: 100%;
  width: $rainbow-bar-width;
  background: $rainbow-gradient-vertical;
  z-index: 2;

  // Set to this by default
  // &:nth-child(1) {
  //   left: 0;
  // }
  &:nth-child(2) {
    right: 0;
    filter: blur(100px);
  }
}
*/

/*
.my-head {
  position: fixed;
  bottom: 0;
  z-index: 1;
  height: $face-height;
  // No WebP fallback, people using bad browsers like Safari don't deserve my-head-compressed-300px.webp anyway
  background: url("{% base64 ./img/my-head-compressed-300px.webp %}") repeat-x
      top/$face-height,
    linear-gradient(hsla(0, 0%, 100%, 0), white 75%);

  // Show 1 extra image-width on the far left (starting into the left side of the page offscreen) so by the end
  // of the animation sequence (after moving 1 image-width), it's still visible.
  left: $face-height * -1;
  width: calc(100% + #{$face-height});

  // &:hover {
  animation: roll 10s infinite linear;
  // }
}
*/

.frame {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100vw;
  width: 100dvw;
  height: 100vh;
  height: 100dvh;
  border: $rainbow-bar-width solid;
  pointer-events: none;
  z-index: 999;
}

.ethan {
  height: 166px;
  position: fixed;
  bottom: 30px;
  right: 82px;
  z-index: 1;
}

// Using this animation method (transforming) rather than background-position to take advantage of the GPU.
@keyframes roll {
  // No need to include this manually, it's assumed:
  // 0% {
  //   transform: translate(0);
  // }
  100% {
    transform: translate($face-height);
  }
}

